# cmake_pratice

t1/: CMakeLists.txt  main.c
t2/: CMakeLists.txt
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  hello
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  CMakeLists.txt.1  main.c
tutorial/: CMakeLists.txt  Tutorial  tutorial.cxx
tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
