ADD_EXECUTABLE (main_shared main.c)
ADD_EXECUTABLE (main_static main.c)
INCLUDE_DIRECTORIES (/usr/include/hello)
LINK_DIRECTORIES (/usr/lib)
TARGET_LINK_LIBRARIES (main_shared libhello.so)
TARGET_LINK_LIBRARIES (main_static libhello.a)


#CMAKE_INCLUDE_PATH
#CMAKE_LIBRARY_PATH

# export CMAKE_INCLUDE_PATH 
# export CMAKE_LIBRARY_PATH

#CMAKE_BINARY_DIR,PROJECT_BINARY_DIR,<projectname>_BINARY_DIR

#CMAKE_SOURCE_DIR,PROJECT_SOURCE_DIR,<projectname>_SOURCE_DIR

#CMAKE_CURRENT_SOURCE_DIR

#CMAKE_CURRENT_BINARY_DIR

#CMAKE_CURRENT_LIST_FILE

#CMAKE_CURRENT_LIST_LINE

#CMAKE_MODULE_PATH

#$ENV{NAME},MESSAGE(STATUS "HOME DIR: $ENV{HOME"} , SET (ENV{VARIABLE_NAME} VARIABLE_VALUE)

#CMAKE_INCLUDE_CURRENT_DIR ,AUTO ADD CMAKE_CURRENT_BINARY_DIR AND CMAKE_CURRENT_SOURCE_DIR = INCLUDE_DIRECTORES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOUCE_DIR})

#CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE

#CMAKE_INCLUDE_PATH AND CMAKE_LIBRARY_PATH

#SYSTEM INFOMATION
#CMAKE_MAJOR_VERSION,CMAKE_MINOR_VERSION,CMAKE_PATCH_VERSION
#CMAKE_SYSTEM,CMAKE_SYSTEM_NAME,CMAKE_SYSTEM_VERSION,CMAKE_SYSTEM_PROCESSOR,UNIX,WIN32

#PRIMARY ON-OFF OPTION 
#CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS
#BUILD_SHARED_LIBS -> SET(BUILD_SHARED_LIBS ON)
#CMAKE_C_FLAGS -> ADD_DEFINITIONS()
#CMAKE_CXX_FLAGS ->ADD_DEFINITIONS()




#-------------------------------------------------------------------------------------------------


#ADD_DEFINITIONS FOR EXAMPLE ADD_DEFINITIONS (-DENABLE_DEBUG -DABC)

#ADD_DEPENDENCIES FOR EXAMPLE ADD_DEPENDENCIES (target-name depend-target1 depend-target2 ...)

#ADD_EXECUTABLE,ADD_LIBRARY,ADD_SUBDIRECTORY

#ADD_TEST ENABLE_TESTING

#AUX_SOURCE_DIRECTORY, AUX_SOURCE_DIRECTORY(dir VARIABLE)

#CMAKE_MINIMUM_REQUIRED

#EXEC_PROGRAM -> EXEC PROGRAM(Executable [directory in which to run] [ ARGS <arguments to executable>] [ OUTPUT_VARIABLE <var>] [RETURN_VALUE <var>])

#FILE

#INCLUDE 

#FIND_




